syntax = "proto3";
option go_package = "./";

package proto;

message CreateOrderRequest {
  int64 book_uuid = 1;
  string description = 2;
}

message BookData {
  string result = 1;
}

message BookId {
  int64 book_uuid = 1;
}

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns (BookData);
}

service BooksService {
  rpc ShowBook(BookId) returns (BookData);
}